--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.70.0",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "next": "14.2.20",
     "next-sanity": "^9.8.38",
