--- a/package.json
+++ b/package.json
@@ -10,20 +10,22 @@
     "import-data": "node scripts/importSanityData.mjs"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.11.1",
     "@sanity/client": "^6.25.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.70.0",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
-    "next": "14.2.20",
+    "next": "^15.1.6",
     "next-sanity": "^9.8.38",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
     "sanity": "^3.70.0",
     "sharp": "^0.33.5",
-    "styled-components": "^6.1.14"
+    "styled-components": "^6.1.14",
+    "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
     "@types/node": "^20",
